--- a/People.html
+++ b/People.html
@@ -102,11 +102,11 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/roungyikim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Kim, Roungyi&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher, Lab Administrator</p>
-                                                <p>roungyi(at)gmail.com<br>
-                                                Earthquake early warning</p>
+                                                <img src="./images/people/KimHangil.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kim, Hangil&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Researcher, Administrator</p>
+                                                <p>seedwhite(at)gmail.com<br>
+                                                Material science</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -115,11 +115,11 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/KimHangil.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Kim, Hangil&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher, Administrator</p>
-                                                <p>seedwhite(at)gmail.com<br>
-                                                Material science</p>
+                                                <img src="./images/people/joakwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kwon, Joa&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Researcher</p>
+                                                <p>kja9022(at)gmail.com<br>
+                                                Teleseismic Rayleigh-wave phase velocity tomography</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -179,37 +179,11 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/mijikim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Kim, Miji&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
-                                                <p>M.S. Student; Internship Trainee at KIGAM</p>
-                                                <p>miji61759(at)gmail.com<br>
-                                                Uncertainty of seismicity</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
                                                 <img src="./images/people/donghyeopseol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Seol, DongHyeop&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
                                                 <p>donghyeop0619(at)gmail.com<br>
                                                 Rupture directivity</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/joakwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Kwon, Joa&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
-                                                <p>M.S. Student</p>
-                                                <p>kja9022(at)gmail.com<br>
-                                                Crustal structure from seismic tomography</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -270,11 +244,11 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/LeeHanByeol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Lee, Han Byeol&nbsp&nbsp</p>
-                                                <p>B.S. Student</p>
-                                                <p>15lhstar@gmail.com<br>
-                                                Earthquake analysis</p>
+                                                <img src="./images/people/parksuhee.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Park, Suhee&nbsp&nbsp</p>
+                                                <p>M.S. Student</p>
+                                                <p>suhee2308(at)gmail.com<br>
+                                                Automatic detection, association, and location of earthquakes</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -283,10 +257,10 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
-                                                <img src="./images/people/parksuhee.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Park, Suhee&nbsp&nbsp</p>
-                                                <p>B.S. Student, presently at Kongju National University</p>
-                                                <p>suhee2308(at)gmail.com<br>
+                                                <img src="./images/people/LeeHanByeol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Lee, Han Byeol&nbsp&nbsp</p>
+                                                <p>B.S. Student</p>
+                                                <p>15lhstar@gmail.com<br>
                                                 Earthquake analysis</p>
                                             </li>
                                         </ul>
@@ -517,6 +491,30 @@
                                                 <p>Researcher</p>
                                                 <p>Korea Meteorological Administration (KMA)</p>
                                                 <p>M.S., Seoul National University, 2020</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/roungyikim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kim, Roungyi&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Researcher</p>
+                                                <p>Korea National University of Education</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/mijikim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kim, Miji&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Research Internship</p>
+                                                <p>Korea Institute of Geoscience and Mineral Resources<br>
                                             </li>
                                         </ul>
                                     </section>
