--- a/Article.html
+++ b/Article.html
@@ -81,7 +81,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Seo, M.-S., Son, Y.O., Kim, Y., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2022). Measurement of seismometer misorientation based on <i>P</i>–wave polarization: application to dense temporary broadband seismic array in the epicentral region of 2016 Gyeongju earthquake, South Korea. <i>Geosciences Journal</i>, <b>**</b>(*), ***-***. <a href="https://doi.org/doi:10.1007/s12303-021-0041-3" target="_blank">doi:10.1007/s12303-021-0041-3</a> (in press)
+                                            <li class="publication">Seo, M.-S., Son, Y.O., Kim, Y., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2022). Measurement of seismometer misorientation based on <i>P</i>–wave polarization: application to dense temporary broadband seismic array in the epicentral region of 2016 Gyeongju earthquake, South Korea. <i>Geosciences Journal</i>, <b>26</b>(3), 385-397. <a href="https://doi.org/doi:10.1007/s12303-021-0041-3" target="_blank">doi:10.1007/s12303-021-0041-3</a> (in press)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -297,6 +297,10 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
+                                            <li class="publication">Shin, J. S., Kang, T.-S. (2008). Distance dependency of corner frequencies for earthquakes in and around the Korean Peninsula . <i>Journal of the Earthquake Engineering Society of Korea</i>, <b>12</b>(5), 39-45. <a href="https://www.koreascience.or.kr/article/JAKO200833237836212.pdf" target="_blank">doi:10.5000/EESK.2008.12.5.039</a>
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
                                             <li class="publication">Kanlı, A. I., Kang, T.-S., Pınar, A., Tildy, P., Prónay, Zs. (2008). A systematic geophysical approach for site response of the Dinar region, southwestern Turkey. <i>Journal of Earthquake Engineering</i>, <b>12</b>(1:S2), 165-174. <a href="https://doi.org/10.1080/13632460802013966" target="_blank">doi:10.1080/13632460802013966</a>
                                             </li>
                                         </ul>
@@ -305,7 +309,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Chi, H.-C., Park, J.H., Cho, C.S., Kang, T.-S. (2007). Seismological implication of the 2017 Odaesan earthquake. <i>Disaster Prevention Review</i>, <b>9</b>. <a href="http://www.kodipa.or.kr/HyAdmin/view.php?&amp;bbs_id=bo01&amp;page=6&amp;doc_num=63" target="_blank">16-22 (in Korean)</a>
+                                            <li class="publication">Chi, H.-C., Park, J.H., Cho, C.S., Kang, T.-S. (2007). Seismological implication of the 2017 Odaesan earthquake. <i>Journal of Disaster Prevention</i>, <b>29</b>. <a href="http://www.kodipa.or.kr/HyAdmin/view.php?&bbs_id=bo01&page=8&doc_num=63" target="_blank">16-22 (in Korean)</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
