--- a/Article.html
+++ b/Article.html
@@ -81,7 +81,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Seo, M.-S., Son, Y.O., Kim, Y., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2022). Measurement of seismometer misorientation based on <i>P</i>–wave polarization: application to dense temporary broadband seismic array in the epicentral region of 2016 Gyeongju earthquake, South Korea. <i>Geosciences Journal</i>, <b>26</b>(3), 385-397. <a href="https://doi.org/doi:10.1007/s12303-021-0041-3" target="_blank">doi:10.1007/s12303-021-0041-3</a> (in press)
+                                            <li class="publication">Seo, M.-S., Son, Y.O., Kim, Y., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2022). Measurement of seismometer misorientation based on <i>P</i>–wave polarization: application to dense temporary broadband seismic array in the epicentral region of 2016 Gyeongju earthquake, South Korea. <i>Geosciences Journal</i>, <b>26</b>(3), 385-397. <a href="https://doi.org/doi:10.1007/s12303-021-0041-3" target="_blank">doi:10.1007/s12303-021-0041-3</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -297,7 +297,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Shin, J. S., Kang, T.-S. (2008). Distance dependency of corner frequencies for earthquakes in and around the Korean Peninsula . <i>Journal of the Earthquake Engineering Society of Korea</i>, <b>12</b>(5), 39-45. <a href="https://www.koreascience.or.kr/article/JAKO200833237836212.pdf" target="_blank">doi:10.5000/EESK.2008.12.5.039</a>
+                                            <li class="publication">Shin, J. S., Kang, T.-S. (2008). Distance dependency of corner frequencies for earthquakes in and around the Korean Peninsula . <i>Journal of the Earthquake Engineering Society of Korea</i>, <b>12</b>(5), 39-45. <a href="https://www.koreascience.or.kr/article/JAKO200833237836212.pdf" target="_blank">doi:10.5000/EESK.2008.12.5.039</a> (in Korean with English abstract)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
