--- a/KangTaeSeob_CV.html
+++ b/KangTaeSeob_CV.html
@@ -69,7 +69,7 @@
                                         1991, B.S., Department of Geological Sciences, Seoul National University<br>
                                         1993, M.S., Department of Geological Sciences, Seoul National University<br>
                                         2004, Ph.D., School of Earth and Environmental Sciences, Seoul National University<br>
-                                        <p style="text-indent: 30px;">Thesis title: <a href="http://dcollection.snu.ac.kr/jsp/common/DcLoOrgPer.jsp?sItemId=000000053492" target="_blank">Simulation of Simulation of Seismic Wave Propagation Using Locally Variable Time-step Finite-difference Method</a></p>
+                                        <p style="text-indent: 30px;">Thesis title: <a href="http://dcollection.snu.ac.kr/jsp/common/DcLoOrgPer.jsp?sItemId=000000053492" target="_blank">Simulation of Seismic Wave Propagation Using Locally Variable Time-step Finite-difference Method</a></p>
 									</section>
 							</div>
                         </div>
