--- a/Article.html
+++ b/Article.html
@@ -81,6 +81,10 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
+                                            <li class="publication">Cho, E., Woo, J.-U., Rhie, J., Kang, T.-S., Baag, S.-Y. (2023). Rupture process of the 2017 <i>M</i><sub>w</sub> 5.5 Pohang, South Korea, earthquake via an empirical Green's function method. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), ***-***. <a href="https://doi.org/10.1785/0120220161" target="_blank">doi:10.1785/0120220161</a>
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
                                             <li class="publication">Seo, M.-S., Son, Y.O., Kim, Y., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2022). Measurement of seismometer misorientation based on <i>P</i>–wave polarization: application to dense temporary broadband seismic array in the epicentral region of 2016 Gyeongju earthquake, South Korea. <i>Geosciences Journal</i>, <b>26</b>(3), 385-397. <a href="https://doi.org/doi:10.1007/s12303-021-0041-3" target="_blank">doi:10.1007/s12303-021-0041-3</a>
                                             </li>
                                         </ul>
