--- a/Article.html
+++ b/Article.html
@@ -81,7 +81,11 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Cho, E., Woo, J.-U., Rhie, J., Kang, T.-S., Baag, S.-Y. (2023). Rupture process of the 2017 <i>M</i><sub>w</sub> 5.5 Pohang, South Korea, earthquake via an empirical Green's function method. <i>Bulletin of the Seismological Society of America</i>, <b>***</b>(*), ***-***. <a href="https://doi.org/10.1785/0120220161" target="_blank">doi:10.1785/0120220161</a>
+                                            <li class="publication">Park, H., Kang, T.-S., Yoo, H.J., Heo, D. (2023). Microearthquake activity associated with the 2016 ML 5.0 offshore Ulsan earthquake sequence and its tectonic implications. <i>Marine Geophysical Research</i>. <a href="https://doi.org/10.1007/s11001-023-09515-2" target="_blank">doi:10.1007/s11001-023-09515-2</a> (in press)
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">Cho, E., Woo, J.-U., Rhie, J., Kang, T.-S., Baag, S.-Y. (2023). Rupture process of the 2017 <i>M</i><sub>w</sub> 5.5 Pohang, South Korea, earthquake via an empirical Green's function method. <i>Bulletin of the Seismological Society of America</i>, <b>113</b>(2), 592-603. <a href="https://doi.org/10.1785/0120220161" target="_blank">doi:10.1785/0120220161</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
