--- a/People.html
+++ b/People.html
@@ -111,19 +111,6 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/joakwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Kwon, Joa&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Researcher</p>
-                                                <p>kja9022(at)gmail.com<br>
-                                                Teleseismic Rayleigh-wave phase velocity tomography</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
                         </div>
                         <div class="row">
                             <!--<div class="col-4 col-12-medium">-->
@@ -266,19 +253,6 @@
                                         </ul>
                                     </section>
                             </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/gohyejeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Go, Hyejeong&nbsp&nbsp</p>
-                                                <p>B.S. Student</p>
-                                                <p>hyejeong7518(at)gmail.com<br>
-                                                Earthquake analysis</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
                         </div>
                         <div class="row">
                             <!--<div class="col-4 col-12-medium">-->
@@ -312,7 +286,7 @@
                                                 <img src="./images/people/satbyulkim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Satbyul&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
                                                 <p>Postdoctoral Researcher</p>
-                                                <p>Kangwon National University</p>
+                                                <p>Korea University</p>
                                                 <p>Ph.D., Pukyong National University, 2020</p>
                                             </li>
                                         </ul>
@@ -325,7 +299,7 @@
                                                 <img src="./images/people/silhouette.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Witek, Michael&nbsp&nbsp<q style="font-size:12px">Ph.D.</q></p>
                                                 <p>Postdoctoral Researcher</p>
-                                                <p>Kangwon National University</p>
+                                                <p>Korea University</p>
                                                 <p>Fulbright U.S. Student Award to Korea (2014-2015)</p>
                                                 <p>Ph.D., Northwestern University, 2018</p>
                                             </li>
@@ -513,8 +487,31 @@
                                             <li>
                                                 <img src="./images/people/mijikim.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Kim, Miji&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
-                                                <p>Research Internship</p>
-                                                <p>Korea Institute of Geoscience and Mineral Resources<br>
+                                                <p>Researcher</p>
+                                                <p>Korea Institute of Geoscience and Mineral Resources (KIGAM)<br>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/gohyejeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Go, Hyejeong&nbsp&nbsp</p>
+                                                <p>B.S. Student</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/joakwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kwon, Joa&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Researcher</p>
+                                                <p>Korea Institute of Geoscience and Mineral Resources (KIGAM)</p>
                                             </li>
                                         </ul>
                                     </section>
