--- a/Article.html
+++ b/Article.html
@@ -81,7 +81,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Park, H., Kang, T.-S., Yoo, H.J., Heo, D. (2023). Microearthquake activity associated with the 2016 ML 5.0 offshore Ulsan earthquake sequence and its tectonic implications. <i>Marine Geophysical Research</i>. <a href="https://doi.org/10.1007/s11001-023-09515-2" target="_blank">doi:10.1007/s11001-023-09515-2</a> (in press)
+                                            <li class="publication">Park, H., Kang, T.-S., Yoo, H.J., Heo, D. (2023). Microearthquake activity associated with the 2016 ML 5.0 offshore Ulsan earthquake sequence and its tectonic implications. <i>Marine Geophysical Research</i>. <b>44</b>(2):9. <a href="https://doi.org/10.1007/s11001-023-09515-2" target="_blank">doi:10.1007/s11001-023-09515-2</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
