--- a/Article.html
+++ b/Article.html
@@ -261,7 +261,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Chu, K. S., Tsuji, Y., Baag, C.-E., Kang, T.-S. (2011). Volcanic eruptions of Mt. Baekdu (Changbai) occurring in historical time. <i>Bulletin of the Earthquake Research Institute, University of Tokyo</i>, <b>86</b>(1/2). <a href="http://www.eri.u-tokyo.ac.jp/BERI/pdf/IHO86102.pdf" target="_blank">11-27</a>. (In Japanese with English abstract)
+                                            <li class="publication">Chu, K. S., Tsuji, Y., Baag, C.-E., Kang, T.-S. (2011). Volcanic eruptions of Mt. Baekdu (Changbai) occurring in historical time. <i>Bulletin of the Earthquake Research Institute, University of Tokyo</i>, <b>86</b>(1/2). <a href="http://www.eri.u-tokyo.ac.jp/BERI/pdf/IHO86102.pdf" target="_blank">11-27</a>. <a href="https://doi.org/10.15083/0000032417" target="_blank">doi:10.15083/0000032417</a> (In Japanese with English abstract)
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
